feat: JWT 刷新窗口、CORS 配置与资源菜单调整